Fix: Use environment variables for DB and CORS

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=http://localhost:3001/api
+mongodb+srv://msbhakare5_db_user:opQcduMFklvMCtUz@cluster0.hdch3qe.mongodb.net/dsa-mentor-db?retryWrites=true&w=majority&appName=Cluster0
